[package]
name = "signify"
version = "0.4.1"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

keywords = [ "cryptography", "security" ]
description = "Create cryptographic signatures and verify them"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/badboy/signify-rs"
repository = "https://github.com/badboy/signify-rs"

include = [
  "/Cargo.toml",
  "/README*",
  "/LICENSE*",
  "/src/**/*",
  "/tests/compare.sh",
  "/tests/full-cycle.sh",
  "/tests/integration.sh",
  "/examples/**/*",
]

[dependencies]
base64 = "0.9.0"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
ed25519-dalek = "0.7"
rand = "0.5"
sha2 = "0.7"
structopt = "0.2.10"
toml = "0.4.6"
